Bump the gradle-updates group across 1 directory with 4 updates (#66)
* Bump the gradle-updates group across 1 directory with 4 updates

Bumps the gradle-updates group with 4 updates in the / directory: [org.yaml:snakeyaml](https://bitbucket.org/snakeyaml/snakeyaml), io.swagger.core.v3:swagger-models, [org.testcontainers:testcontainers-bom](https://github.com/testcontainers/testcontainers-java) and gradle-wrapper.


Updates `org.yaml:snakeyaml` from 2.2 to 2.6
- [Commits](https://bitbucket.org/snakeyaml/snakeyaml/branches/compare/snakeyaml-2.6..snakeyaml-2.2)

Updates `io.swagger.core.v3:swagger-models` from 2.2.43 to 2.2.44

Updates `org.testcontainers:testcontainers-bom` from 1.20.1 to 2.0.3
- [Release notes](https://github.com/testcontainers/testcontainers-java/releases)
- [Changelog](https://github.com/testcontainers/testcontainers-java/blob/main/CHANGELOG.md)
- [Commits](https://github.com/testcontainers/testcontainers-java/compare/1.20.1...2.0.3)

Updates `gradle-wrapper` from 9.3.1 to 9.4.0

---
updated-dependencies:
- dependency-name: org.yaml:snakeyaml
  dependency-version: '2.6'
  dependency-type: direct:production
  update-type: version-update:semver-minor
  dependency-group: gradle-updates
- dependency-name: io.swagger.core.v3:swagger-models
  dependency-version: 2.2.44
  dependency-type: direct:production
  update-type: version-update:semver-patch
  dependency-group: gradle-updates
- dependency-name: org.testcontainers:testcontainers-bom
  dependency-version: 2.0.3
  dependency-type: direct:production
  update-type: version-update:semver-major
  dependency-group: gradle-updates
- dependency-name: gradle-wrapper
  dependency-version: 9.4.0
  dependency-type: direct:production
  update-type: version-update:semver-minor
  dependency-group: gradle-updates
...

Signed-off-by: dependabot[bot] <support@github.com>

* update testcontainers dependencies, fix deprecations

* empty commit - trigger build

---------

Signed-off-by: dependabot[bot] <support@github.c